--- a/packages/ui/src/elements/Dialog/index.css
+++ b/packages/ui/src/elements/Dialog/index.css
@@ -38,7 +38,7 @@
   }
 
   .dialog--large {
-    --dialog-width: 840px;
+    --dialog-width: 970px;
   }
 
   .dialog__header {
